--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# testcode
+test.py
+hoge.py
+fuga.py
+hogehoge.py
+hogefuga.py
+fugafuga.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
